--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -3,53 +3,41 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-main:
-  - name: " "
-    weight: 5
-  - name: Home
-    url: '/'
-    weight: 10
-  - name: Publications
-    url: '/publication/'
-    weight: 40
-  - name: Open Research
-    url: '/openResearch/'
-    weight: 50
-  - name: Blog
-    url: '/blog/'
-    weight: 60
+# main:
+#   - name: " "
+#     weight: 5
+#   - name: Home
+#     url: '/'
+#     weight: 10
+#   - name: Publications
+#     url: '/publication/'
+#     weight: 40
+#   - name: Open Research
+#     url: '/openResearch/'
+#     weight: 50
+  # - name: Blog
+  #   url: '/blog/'
+  #   weight: 60
   # - name: BANG Questionnaire
   #   url: '/docs/bang/'
   #   weight: 65
-  - name: CV
-    url: '/files/cv.pdf'
-    weight: 70
+  # - name: CV
+  #   url: '/files/cv.pdf'
+  #   weight: 70
   
 # Sub-home menu
-  - name: About
-    url: '#about'
-    parent: " "
-    weight: 50
-  - name: Skills
-    url: '#skills'
-    parent: " "
-    weight: 50
-  - name: Background
-    url: '#cv'
-    parent: " "
-    weight: 60
-  - name: Recent Publications
-    url: '#publications'
-    parent: " "
-    weight: 70  
-  - name: Recent Blog Posts
-    url: '#posts'
-    parent: " "
-    weight: 80
-  - name: Contact
-    url: '#contact'
-    parent: " "
-    weight: 90
+  # - name: About
+  #   url: '#about'
+  #   parent: " "
+  #   weight: 50
+  # - name: Research & Resources
+  #   url: '#rr'
+  #   parent: " "
+  #   weight: 70  
+  # - name: Contact
+  #   url: '#contact'
+  #   parent: " "
+  #   weight: 90
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
