--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -24,14 +24,14 @@ name = "my_theme"
 #  text = "#8342a8"
 #  link_decoration = "underline"
   
-  menu_primary = "#0E182E"
+  menu_primary = "#2e0101"
   menu_text_active = "#F3B26D"
   
-  background = "#1C2945"
+  background = "#500000"
   
   # Home sections
-  home_section_odd = "#1C2945"
-  home_section_even = "#0E182E"
+  home_section_odd = "#500000"
+  home_section_even = "#2e0101"
 
   link = "#F3B26D"
   link_hover = "#377DE8"
