--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Lens Lab # Website name
-baseURL: 'https://lenslabtamu.com/' # Website URL
+baseURL: 'https://Prathikvijaykumar.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
